--- a/lab1.2.html
+++ b/lab1.2.html
@@ -4,7 +4,7 @@
 function calculation() {
 var x= 12;
 var y= 5;
-var result= x - x*y + y*y;
+var result= x - x*y + Math.pow(y,2);
 alert(result);
 }
 </script>
