--- a/Lab1/lab1.1.html
+++ b/Lab1/lab1.1.html
@@ -1,5 +1,8 @@
 <html>
-<body>
+    <head>
+        <title>Завдання №1</title>
+    </head>
+    <body>
 <br>
 Це звичайний HTML документ.
 <br>
@@ -12,6 +15,6 @@ document.write("Дмитренко Олег Андрійович")
 <form>
 <input type="button" value="Дата та місце народження" onClick="alert('27.05.2003, м.Коломия')">
 </form>
-</body>
+    </body>
 </html>
 
