--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <h2>Лабораторні роботи по JavaScript</h2>
     </head>
     <body>
-        <p><a class="text1" href="lab1.html">Лабораторна робота №1</a>
+        <p><a class="text1" href="Lab1/lab1.html">Лабораторна робота №1</a>
+        <p><a class="text2" href="Lab2/lab2.html">Лабораторна робота №2</a>
+        <p><a class="text3" href="Lab3/lab3.html">Лабораторна робота №3</a>
+        <p><a class="text4" href="Lab4/lab4.html">Лабораторна робота №4</a>
+        <p><a class="text5" href="Lab5/lab5.html">Лабораторна робота №5</a>
+        <p><a class="text6" href="Lab6/lab6.html">Лабораторна робота №6</a>
     </body>
 </html>
