--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <p><a class="text1" href="Lab1_dmytrenko/lab1.html">Лабораторна робота №1 +</a>
         <p><a class="text2" href="Lab2_dmytrenko/Lab2.dmytrenko.html">Лабораторна робота №2 +</a>
-        <p><a class="text3" href="Lab3/lab3.html">Лабораторна робота №3</a>
+        <p><a class="text3" href="Lab3_dmytrenko/index.dmytrenko.html">Лабораторна робота №3 +</a>
         <p><a class="text4" href="Lab4/lab4.html">Лабораторна робота №4</a>
         <p><a class="text5" href="Lab5/lab5.html">Лабораторна робота №5</a>
         <p><a class="text6" href="Lab6/lab6.html">Лабораторна робота №6</a>
