--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <p><a class="text2" href="Lab2_dmytrenko/Lab2.dmytrenko.html">Лабораторна робота №2 +</a>
         <p><a class="text3" href="Lab3_dmytrenko/index.dmytrenko.html">Лабораторна робота №3 +</a>
         <p><a class="text4" href="Lab4_dmytrenko/lab4.dmytrenko.html">Лабораторна робота №4 +</a>
-        <p><a class="text5" href="Lab5/lab5.html">Лабораторна робота №5</a>
+        <p><a class="text5" href="Lab5_dmytrenko/index.html">Лабораторна робота №5 +</a>
         <p><a class="text6" href="Lab6/lab6.html">Лабораторна робота №6</a>
     </body>
 </html>
