--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <p><a class="text4" href="Lab4_dmytrenko/lab4.dmytrenko.html">Лабораторна робота №4 +</a>
         <p><a class="text5" href="Lab5_dmytrenko/index.html">Лабораторна робота №5 +</a>
         <p><a class="text6" href="Lab6_dmytrenko/index.html">Лабораторна робота №6 +</a>
+        <p><a class="text7" href="Lab7_dmytrenko/index.html">Лабораторна робота №7 +</a>
     </body>
 </html>
