--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Лабораторні роботи по JavaScript</title>
-        <h2>Лабораторні роботи по JavaScript</h2>
+        <h2>Лабораторні роботи по JavaScript(Варіант 7)</h2>
     </head>
     <body>
         <p><a class="text1" href="Lab1_dmytrenko/lab1.html">Лабораторна робота №1 +</a>
@@ -11,5 +11,6 @@
         <p><a class="text5" href="Lab5_dmytrenko/index.html">Лабораторна робота №5 +</a>
         <p><a class="text6" href="Lab6_dmytrenko/index.html">Лабораторна робота №6 +</a>
         <p><a class="text7" href="Lab7_dmytrenko/index.html">Лабораторна робота №7 +</a>
+        <p><a class="text8" href="Test_dmytrenko/test.html">Контрольна робота +</a>
     </body>
 </html>
